--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,3 +66,8 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+# FOS
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: IUT\NuptiasBundle\Entity\User
