--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -11,16 +11,28 @@ fos_user_security:
 
 fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
-    prefix: /profile
+    prefix: /
 
 fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /inscription
+    prefix: /
 
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
-    prefix: /resetting
+    prefix: /
 
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
-    prefix: /profile
+    prefix: /
+
+fos_user_registration_register:
+    path:      /inscription
+    defaults:  { _controller: FOSUserBundle:Registration:register }
+
+fos_user_security_login:
+    path: /inscription
+    defaults: { _controller: FOSUserBundle:Security:login }
+
+fos_user_security_logout:
+    path: /deconnexion
+    defaults: { _controller: FOSUserBundle:Security:logout }
