--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,12 +6,12 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-      locale: fr
+    locale: fr
 
 framework:
     #esi:             ~
     translator:
-        fallbacks: [fr]
+      fallbacks: [fr]
 
     secret:          "%secret%"
     router:
@@ -38,6 +38,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    form_themes:
+        - 'bootstrap_3_layout.html.twig' # /!\ A SUPPRIMER/MODIFIER POUR AVOIR UN THEME PLUS FLEXIBLE
 
 # Doctrine Configuration
 doctrine:
