--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,5 +1,7 @@
 imports:
     - { resource: config.yml }
+    - { resource: services.yml }
+
 
 #doctrine:
 #    orm:
@@ -19,3 +21,31 @@ monolog:
             level: debug
         console:
             type:  console
+
+doctrine:
+     dbal:
+        driver:   pdo_mysql
+        host:     "%database_host%"
+        port:     "%database_port%"
+        dbname:   "%database_name%"
+        user:     "%database_user%"
+        password: "%database_password%"
+        charset:  UTF8
+
+     orm:
+        auto_generate_proxy_classes: "%kernel.debug%"
+        naming_strategy: doctrine.orm.naming_strategy.underscore
+        auto_mapping: true
+
+
+# Swiftmailer Configuration
+swiftmailer:
+    transport: "%mailer_transport%"
+    host:      "%mailer_host%"
+    username:  "%mailer_user%"
+    password:  "%mailer_password%"
+    spool:     { type: memory }
+# FOS
+fos_user:
+    firewall_name: main
+    user_class: IUT\NuptiasBundle\Entity\User
