Modification des formulaires de connexion et de creation de mariage.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -111,7 +111,7 @@ pugx_multi_user:
           class: IUT\NuptiasBundle\Entity\Prestataire
         registration:
           form:
-            type: FOS\UserBundle\Form\Type\RegistrationFormType
+            type: IUT\NuptiasBundle\Form\RegistrationPrestataireType
           template: FOSUserBundle:Registration:prestataire.form.html.twig
         profile:
           form:
