--- a/src/IUT/NuptiasBundle/Resources/config/routing.yml
+++ b/src/IUT/NuptiasBundle/Resources/config/routing.yml
@@ -26,9 +26,12 @@ iut_nuptias_organisation:
         _controller: IUTNuptiasBundle:Nuptias:organisation
 
 iut_nuptias_invites:
-    path:    /organisation/invites
+    path:    /organisation/invites/{id_mariage}
     defaults:
         _controller: IUTNuptiasBundle:Nuptias:invites
+        id_mariage: 0
+    requirements:
+        id_mariage:   \d*
 
 iut_nuptias_mariage:
     path:    /organisation/mariage/{pack}
