--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,8 +2,14 @@
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
 #    parameter_name: value
-
+  twig.config:
+    debug: true
 services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    app.twig_extension:
+        class: IUT\NuptiasBundle\Twig\NuptiasExtension
+        public: false
+        tags:
+            - { name: twig.extension }
