Affichage des services pour le prestataire

--- a/src/IUT/NuptiasBundle/Resources/config/routing.yml
+++ b/src/IUT/NuptiasBundle/Resources/config/routing.yml
@@ -74,6 +74,11 @@ iut_nuptias_create_service:
     defaults:
         _controller: IUTNuptiasBundle:Nuptias:createService
 
+iut_nuptias_edit_service:
+    path: /service/modification
+    defaults:
+        _controller: IUTNuptiasBundle:Nuptias:editService
+
 iut_nuptias_service:
     path: /service/gestion
     defaults:
