Affichages des services pour le client

--- a/src/IUT/NuptiasBundle/Resources/config/routing.yml
+++ b/src/IUT/NuptiasBundle/Resources/config/routing.yml
@@ -92,3 +92,8 @@ iut_nuptias_invite_reponse:
         id_mariage: \d*
         id_invite:  \d*
         id_reponse: \d*
+
+iut_nuptias_affiche_services:
+    path: /service/affichage
+    defaults:
+        _controller: IUTNuptiasBundle:afficheServices
