--- a/src/IUT/NuptiasBundle/Resources/config/routing.yml
+++ b/src/IUT/NuptiasBundle/Resources/config/routing.yml
@@ -79,6 +79,11 @@ iut_nuptias_edit_service:
     defaults:
         _controller: IUTNuptiasBundle:Nuptias:editService
 
+iut_nuptias_delete_service:
+    path: /service/suppression
+    defaults:
+        _controller: IUTNuptiasBundle:Nuptias:deleteService
+
 iut_nuptias_service:
     path: /service/gestion
     defaults:
@@ -97,3 +102,8 @@ iut_nuptias_affiche_services:
     path: /service/affichage
     defaults:
         _controller: IUTNuptiasBundle:Nuptias:afficheServices
+
+iut_nuptias_add_service_client:
+    path: /service/ajouter
+    defaults:
+        _controller: IUTNuptiasBundle:Nuptias:addService
