--- a/src/IUT/NuptiasBundle/Resources/config/routing.yml
+++ b/src/IUT/NuptiasBundle/Resources/config/routing.yml
@@ -97,3 +97,8 @@ iut_nuptias_affiche_services:
     path: /service/affichage
     defaults:
         _controller: IUTNuptiasBundle:Nuptias:afficheServices
+
+iut_nuptias_contact:
+    path: /contact
+    defaults:
+        _controller: IUTNuptiasBundle:Nuptias:contact
